kubernetes/apps/storage/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: storage
spec:
  hostnames: ["rook.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      port: 443
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rook-ceph-mgr-dashboard
      namespace: storage
      # cephClusterSpec.dashboard.ssl is false, so this is plain HTTP on 7000.
      port: 7000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
